feat: add support for beet and potato farming, enhance viewer control UI and setup spawn functionality

--- a/mc-bots/remote_control_ui.html
+++ b/mc-bots/remote_control_ui.html
@@ -139,10 +139,15 @@
         <div class="card-body">
           <label>Enable Viewer Control Layer</label>
           <button id="toggle-controls" class="secondary">Enable</button>
+          <label>Viewer Iframe Control Mode</label>
+          <button id="toggle-viewer-control" class="secondary">Enable</button>
           <label>Look Sensitivity</label>
           <input id="look-sensitivity" value="0.0025" />
           <p style="font-size: 12px; color: #aab0c0;">
             Right click + drag to look. WASD to move, Space to jump, Shift to sprint.
+          </p>
+          <p style="font-size: 12px; color: #aab0c0;">
+            Iframe control mode adds ?control=true to the viewer URL. Click inside the viewer to lock the pointer.
           </p>
         </div>
       </div>
