feat: Add bot selection dropdown for job assignment and improve job start/stop handling

--- a/mc-bots/remote_control_ui.html
+++ b/mc-bots/remote_control_ui.html
@@ -69,6 +69,8 @@
           </div>
         </div>
         <div class="card-body">
+          <label>Bot</label>
+          <select id="job-bot-select"></select>
           <label>Job</label>
           <select id="job-select"></select>
           <label>Job Options (JSON)</label>
