feat: Add retro UI styles and enable viewer controls by default

--- a/mc-bots/remote_control_ui.html
+++ b/mc-bots/remote_control_ui.html
@@ -4,13 +4,13 @@
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <title>CCCPCCC Control Console</title>
-  <link rel="stylesheet" href="/remote_control_ui.css" />
+  <link rel="stylesheet" href="/remote_control_ui_retro.css" />
 </head>
 <body>
   <div class="shell">
     <header class="main-header">
       <div class="title-block">
-        <h1>CrayCon Creepers Central Production Command and Control Center (CCCPCCC, lol)</h1>
+        <h1>CrayCon Creepers Central Production Command&Control Center (CCCPCCC)</h1>
         <div class="subtitle">Authorized Operators Only • Productivity Above All</div>
       </div>
       <div class="header-actions">
@@ -153,7 +153,7 @@
         </div>
         <div class="card-body">
           <label>Enable Viewer Control Layer</label>
-          <button id="toggle-controls" class="secondary">Enable</button>
+          <button id="toggle-controls" class="secondary">Disable</button>
           <label>Viewer Iframe Control Mode</label>
           <button id="toggle-viewer-control" class="secondary">Enable</button>
           <label>Look Sensitivity</label>
