--- a/mc-bots/remote_control_ui.html
+++ b/mc-bots/remote_control_ui.html
@@ -4,7 +4,7 @@
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <title>CCCPCCC Control Console</title>
-  <link rel="stylesheet" href="/remote_control_ui_retro.css" />
+  <link rel="stylesheet" href="/remote_control_ui.css" />
 </head>
 <body>
   <div class="shell">
