feat: Implement carrot farming bot with harvesting and planting functionality

--- a/mc-bots/remote_control_ui.html
+++ b/mc-bots/remote_control_ui.html
@@ -64,6 +64,7 @@
             <option value="farmer-wheat">Wheat Farmers</option>
             <option value="farmer-potatoes">Potato Farmers</option>
             <option value="farmer-beets">Beet Farmers</option>
+            <option value="farmer-carrots">Carrot Farmers</option>
           </select>
           <label>Count</label>
           <input id="bulk-count" type="number" min="1" max="10" value="3" />
