--- a/mc-bots/remote_control_ui.html
+++ b/mc-bots/remote_control_ui.html
@@ -151,6 +151,21 @@
         <div class="resize-handle" data-resize-handle aria-hidden="true"></div>
       </div>
 
+      <div class="card" data-card-id="performance" data-card-title="Performance">
+        <div class="card-head" draggable="true">
+          <h3>Performance</h3>
+          <div class="card-actions">
+            <button class="card-action" data-card-action="minimize" aria-label="Minimize">-</button>
+            <button class="card-action" data-card-action="close" aria-label="Close">x</button>
+          </div>
+        </div>
+        <div class="card-body fill">
+          <div id="performance-summary" class="perf-summary">Waiting for telemetry...</div>
+          <pre id="performance">Waiting...</pre>
+        </div>
+        <div class="resize-handle" data-resize-handle aria-hidden="true"></div>
+      </div>
+
       <div class="card" data-card-id="viewer-controls" data-card-title="Viewer Controls">
         <div class="card-head" draggable="true">
           <h3>Viewer Controls</h3>
